--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,16 +6,17 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  firebase_core: ^1.0.2
-  firebase_auth: ^1.0.1
-  firebase_database: ^6.1.1
+  cupertino_icons: ^1.0.3
+  firebase_core: ^1.2.0
+  firebase_auth: ^1.2.0
+  firebase_database: ^6.1.2
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +26,6 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/car_android.png
      - assets/images/car_ios.png
@@ -38,19 +38,8 @@ flutter:
      - assets/images/redmarker.png
      - assets/images/taxi.png
      - assets/images/user_icon.png
-     - assets/sounds
+     - assets/sounds/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Signatra
       fonts:
