--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
   firebase_database: ^6.1.2
-  fluttertoast: ^8.0.7
+  google_maps_flutter: ^2.0.5
 
 dev_dependencies:
   flutter_test:
